--- a/dbt/spacex_transform/dbt_project.yml
+++ b/dbt/spacex_transform/dbt_project.yml
@@ -17,10 +17,10 @@ clean-targets:
   - "dbt_packages"
   - logs
 
-models:
-  spacex_transform:
-    launches:
-      +materialized: table
+# models:
+#   spacex_transform:
+#     launches:
+#       +materialized: table
 
 # sources:
 #   - name: launches
